src/z80asm/z80asm2/t/05-expr/expected/error_syntax.txt
% z88dk-z80asm -v -dump-after-cmdline @t/05-expr//input/error_syntax.lst t/05-expr//input/empty.asm
t/05-expr/input/error_syntax.lst:1:9: error: Expected a value, got "\n"
    -DE00=1+
            ^
t/05-expr/input/error_syntax.lst:2:7: error: Expected a value, got "*"
    -DE01=*3
          ^
t/05-expr/input/error_syntax.lst:3:10: error: Expected a value, got "\n"
    -DE02=1**
             ^
t/05-expr/input/error_syntax.lst:4:11: error: Missing ')' after token "2"
    -DE03=(1+2
              ^
t/05-expr/input/error_syntax.lst:5:10: error: Operator expected after token "2", got ")"
    -DE04=1+2)
             ^
t/05-expr/input/error_syntax.lst:6:11: error: Missing ')' after token ")"
    -DE05=((3)
              ^
t/05-expr/input/error_syntax.lst:7:12: error: Expected a value, got ")"
    -DE06=3+(4*)
               ^
t/05-expr/input/error_syntax.lst:8:8: error: Operator expected after token "3", got "$ff"
    -DE07=3$ff
           ^
t/05-expr/input/error_syntax.lst:9:7: error: Expected a value, got "||"
    -DE08=||5
          ^
t/05-expr/input/error_syntax.lst:10:10: error: Operator expected after token "3", got "#"
    -DE09=2+3#
             ^
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
verbose	1
ucase_symbols	0
preprocess_only	0
swap_ix_iy	0
date_stamp	0
dump_after_cmdline	1
dump_after_tokenization	0
dump_after_directives	0
dump_after_macro_expansion	0
dump_after_preprocessing	0
m4_options	
perl_options	
cpp_options	
output_dir	
global_def	__CPU_Z80__	1
global_def	__CPU_ZILOG__	1
input_file	t/05-expr/input/empty.asm
